Fix footer alignment

--- a/app/index.css
+++ b/app/index.css
@@ -78,14 +78,11 @@ footer {
   gap: var(--gap);
   margin-inline: auto;
   max-width: 87.5rem; /* 1400px */
+  width: 100%;
 
   @media (min-width: 60em) {
     --gap: var(--size-md);
   }
-}
-
-header {
-  width: 100%;
 }
 
 main {
